fixed nav brackets on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -139,6 +139,7 @@ body {
 }
 
 .nav-item-bracket.mobile {
+  height: 18px;
   font-size: 12px;
 }
 
